--- a/PATI-analysis.ipynb
+++ b/PATI-analysis.ipynb
@@ -2,11 +2,479 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('data/Dataset_DeConinck_R.csv', encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cntry</th>\n",
+       "      <th>ans_id</th>\n",
+       "      <th>V001</th>\n",
+       "      <th>V002</th>\n",
+       "      <th>V002bea</th>\n",
+       "      <th>V002beb</th>\n",
+       "      <th>V002at</th>\n",
+       "      <th>V002de</th>\n",
+       "      <th>V002es</th>\n",
+       "      <th>V002it</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V058_5</th>\n",
+       "      <th>V058_6</th>\n",
+       "      <th>V058_7</th>\n",
+       "      <th>V058_8</th>\n",
+       "      <th>V058_9</th>\n",
+       "      <th>V058_10</th>\n",
+       "      <th>V059</th>\n",
+       "      <th>Leeftijd3N</th>\n",
+       "      <th>Diploma2</th>\n",
+       "      <th>Weging</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>62</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.400395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>233</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.720534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>373</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.716512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>405</td>\n",
+       "      <td>2</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.374635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>462</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.689156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 635 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cntry  ans_id  V001  V002  V002bea  V002beb  V002at  V002de  V002es  \\\n",
+       "0      4     100     2    62      NaN      NaN     NaN     NaN     7.0   \n",
+       "1      4     233     2    43      NaN      NaN     NaN     NaN    14.0   \n",
+       "2      4     373     2    34      NaN      NaN     NaN     NaN    17.0   \n",
+       "3      4     405     2    53      NaN      NaN     NaN     NaN    14.0   \n",
+       "4      4     462     1    40      NaN      NaN     NaN     NaN     7.0   \n",
+       "\n",
+       "   V002it  ...  V058_5  V058_6  V058_7  V058_8  V058_9  V058_10  V059  \\\n",
+       "0     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "1     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "2     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "3     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "4     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "\n",
+       "  Leeftijd3N  Diploma2    Weging  \n",
+       "0          3         1  1.400395  \n",
+       "1          2         2  0.720534  \n",
+       "2          1         2  0.716512  \n",
+       "3          2         1  1.374635  \n",
+       "4          2         2  0.689156  \n",
+       "\n",
+       "[5 rows x 635 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.rename(columns = {'cntry' : 'Country',\n",
+    "                              'V001' : 'Gender',\n",
+    "                              'V002' : 'Age',\n",
+    "                              'V003' : 'MaritalSt',\n",
+    "                              'V013' : 'PoliAff',\n",
+    "                              'V021' : 'Religion',\n",
+    "                              'V046' : 'FeelingRefugees'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>ans_id</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>V002bea</th>\n",
+       "      <th>V002beb</th>\n",
+       "      <th>V002at</th>\n",
+       "      <th>V002de</th>\n",
+       "      <th>V002es</th>\n",
+       "      <th>V002it</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V058_5</th>\n",
+       "      <th>V058_6</th>\n",
+       "      <th>V058_7</th>\n",
+       "      <th>V058_8</th>\n",
+       "      <th>V058_9</th>\n",
+       "      <th>V058_10</th>\n",
+       "      <th>V059</th>\n",
+       "      <th>Leeftijd3N</th>\n",
+       "      <th>Diploma2</th>\n",
+       "      <th>Weging</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>62</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.400395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>233</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.720534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>373</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.716512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>405</td>\n",
+       "      <td>2</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.374635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>462</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.689156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 635 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country  ans_id  Gender  Age  V002bea  V002beb  V002at  V002de  V002es  \\\n",
+       "0        4     100       2   62      NaN      NaN     NaN     NaN     7.0   \n",
+       "1        4     233       2   43      NaN      NaN     NaN     NaN    14.0   \n",
+       "2        4     373       2   34      NaN      NaN     NaN     NaN    17.0   \n",
+       "3        4     405       2   53      NaN      NaN     NaN     NaN    14.0   \n",
+       "4        4     462       1   40      NaN      NaN     NaN     NaN     7.0   \n",
+       "\n",
+       "   V002it  ...  V058_5  V058_6  V058_7  V058_8  V058_9  V058_10  V059  \\\n",
+       "0     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "1     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "2     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "3     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "4     NaN  ...     NaN     NaN     NaN     NaN     NaN      NaN   NaN   \n",
+       "\n",
+       "  Leeftijd3N  Diploma2    Weging  \n",
+       "0          3         1  1.400395  \n",
+       "1          2         2  0.720534  \n",
+       "2          1         2  0.716512  \n",
+       "3          2         1  1.374635  \n",
+       "4          2         2  0.689156  \n",
+       "\n",
+       "[5 rows x 635 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "V041_1 = anger\n",
+    "V041_2 = fear\n",
+    "V041_5 = disgust\n",
+    "\n",
+    "V041_3 = hope\n",
+    "V041_4 = sympathy\n",
+    "V041_6 = happiness\n",
+    "\n",
+    "Negative_Sentiment = average or sum of (V041_1, V041_2, V041_5)\n",
+    "\n",
+    "Positive_Sentiment = average or sum of (V041_3, V041_4, V041_6)\n",
+    "\n",
+    "For binary label take whichever sentiment is higher \n",
+    "\n",
+    "We need to pick what vars we care about\n",
+    "\n",
+    "Can we keep ordinal vars? Just need to make sure they're following the same tred (ex. \"worst\" to \"best\")\n",
+    "\n",
+    "One-hot encoding for vars without ranking"
    ]
   },
   {
