--- a/PATI-analysis.ipynb
+++ b/PATI-analysis.ipynb
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "# one hot encoding for nominal variables\n",
-    "# We can use pandas get_dummies to perform one-hot encoding\n",
+    "# We use pandas get_dummies to perform one-hot encoding\n",
     "europe_df = pd.get_dummies(europe_df, columns=['Country','Gender','MaritalSt'])"
    ],
    "metadata": {
@@ -270,12 +270,339 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Where were you born?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V004\n1.0    9817\n2.0     782\nName: count, dtype: int64"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# where were you born?\n",
+    "# merge columns V004 and V005 into a new column. How? no unique ID\n",
+    "europe_df.V004.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V005\n99999.0    9817\n1.0         422\n2.0         357\n3.0           3\nName: count, dtype: int64"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V005.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Education:\n",
+    "Unify education column across all countries.\n",
+    "5 groups:\n",
+    "1. no schooling\n",
+    "2. primary\n",
+    "3. secondary\n",
+    "4. training and education in a specific trade or profession)\n",
+    "5. higher education\n",
+    "6. don’t know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "outputs": [],
+   "source": [
+    "# unify education column across all countries\n",
+    "# 5 groups 1. no schooling 2. primary 3.secondary 4. training and education in a specific trade or profession) 5. higher education 6. don’t know\n",
+    "#1. no schooling already matches across all country columns\n",
+    "# Belgium:\n",
+    "europe_df.V010be.replace([2,3], 2, inplace=True) #primary\n",
+    "europe_df.V010be.replace([4,5,9,10], 3, inplace=True) #secondary\n",
+    "europe_df.V010be.replace([6,7,8,11], 4, inplace=True) #job training\n",
+    "europe_df.V010be.replace([12,13,14,15,16,17,18], 5, inplace=True) # higher education\n",
+    "europe_df.V010be.replace(19, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010be\n3.0    1205\n2.0     282\n1.0      10\n4.0       8\nName: count, dtype: int64"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010be.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "# Austria primary matches\n",
+    "europe_df.V010at.replace([3,4,5,8,10], 3, inplace=True) #secondary\n",
+    "europe_df.V010at.replace([6,7,9,11], 4, inplace=True) #job training\n",
+    "europe_df.V010at.replace([12,13,14,15,16,17,18], 5, inplace=True) # higher education\n",
+    "europe_df.V010at.replace(19, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010at\n4.0    745\n3.0    434\n5.0    336\n2.0      3\n6.0      1\n1.0      1\nName: count, dtype: int64"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010at.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [],
+   "source": [
+    "# Germany primary matches\n",
+    "europe_df.V010de.replace([3,4,5,6], 3, inplace=True) #secondary\n",
+    "europe_df.V010de.replace(7, 4, inplace=True) #job training\n",
+    "europe_df.V010de.replace([8,9], 5, inplace=True) # higher education\n",
+    "europe_df.V010de.replace(10, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010de\n3.0    553\n5.0    506\n4.0    455\n1.0      4\n2.0      2\n6.0      1\nName: count, dtype: int64"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010de.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [],
+   "source": [
+    "# Spain:\n",
+    "europe_df.V010es.replace([2,3,4,5,6,7], 2, inplace=True) #primary\n",
+    "europe_df.V010es.replace([8,9,10,11,12], 3, inplace=True) #secondary\n",
+    "europe_df.V010es.replace([13,14,15,16,17,18,19,20,21,22,23,24], 4, inplace=True) #job training\n",
+    "europe_df.V010es.replace([25,26,27], 5, inplace=True) # higher education\n",
+    "europe_df.V010es.replace(28, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010es\n5.0    635\n4.0    440\n3.0    345\n2.0     86\n6.0      6\nName: count, dtype: int64"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010es.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [],
+   "source": [
+    "#Italy primary matches\n",
+    "europe_df.V010it.replace([4,6,8,9], 3, inplace=True) #secondary\n",
+    "europe_df.V010it.replace([3,5,7,10,11], 4, inplace=True) #job training\n",
+    "europe_df.V010it.replace([12,13,14,15,16,17,18,19,20,21], 5, inplace=True) # higher education\n",
+    "europe_df.V010it.replace(22, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010it\n4.0    967\n5.0    529\n2.0      9\n1.0      4\n6.0      1\nName: count, dtype: int64"
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010it.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "# Hungary:\n",
+    "europe_df.V010hu.replace([2,3], 2, inplace=True) #primary\n",
+    "europe_df.V010hu.replace([6,7], 3, inplace=True) #secondary\n",
+    "europe_df.V010hu.replace([4,5,8,9], 4, inplace=True) #job training\n",
+    "europe_df.V010hu.replace([10,11,12,13,14], 5, inplace=True) # higher education\n",
+    "europe_df.V010hu.replace(15, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010hu\n5.0    524\n4.0    500\n3.0    439\n2.0     49\n6.0      2\nName: count, dtype: int64"
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010hu.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [],
+   "source": [
+    "# Sweden:\n",
+    "europe_df.V010se.replace([2,3], 2, inplace=True) #primary\n",
+    "europe_df.V010se.replace([5,6,8], 3, inplace=True) #secondary\n",
+    "europe_df.V010se.replace([4,7,10,12], 4, inplace=True) #job training\n",
+    "europe_df.V010se.replace([9,11,13,14,15,16,17,18,19,20], 5, inplace=True) # higher education\n",
+    "europe_df.V010se.replace(21, 6, inplace=True) # dont know"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V010se\n5.0    650\n4.0    398\n3.0    358\n2.0     93\n6.0     12\n1.0      6\nName: count, dtype: int64"
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.V010se.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Income\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "# where were you born?\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
