Data prep. Naming columns + one hot endcoding

--- a/PATI-analysis.ipynb
+++ b/PATI-analysis.ipynb
@@ -592,7 +592,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Income\n"
+    "## Income\n",
+    "We are only interested in the income brackets (Values 1 - 10) I am not sure if this is even necessary. They seem to match pretty well. Only Spain is weird because they have one less."
    ],
    "metadata": {
     "collapsed": false
@@ -600,9 +601,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 72,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "V011es\n3.0     205\n5.0     193\n6.0     180\n8.0     178\n4.0     176\n7.0     161\n2.0     139\n1.0      96\n9.0      96\n10.0     41\n11.0     29\n12.0     18\nName: count, dtype: int64"
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop columns we don't need.\n",
+    "europe_df.V011es.value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Sentiment columns\n",
+    "Group into negative and positive feelings towards immigrants"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -631,6 +654,15 @@
     "\n",
     "One-hot encoding for vars without ranking"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
