Added Sentiment Columns

--- a/PATI-analysis.ipynb
+++ b/PATI-analysis.ipynb
@@ -633,6 +633,42 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [],
+   "source": [
+    "europe_df['NegativeEmo'] = europe_df['Anger'] + europe_df['Fear'] + europe_df['Disgust']\n",
+    "europe_df['PositiveEmo'] = europe_df['Hope'] + europe_df['Sympathy'] + europe_df['Happiness']\n",
+    "# Add a binary column based on the overall sentiment\n",
+    "europe_df['SentimentBinary'] = np.where(europe_df['NegativeEmo'] > europe_df['PositiveEmo'], 0, 1)\n",
+    "# 0 overall negative sentiment\n",
+    "# 1 overall positive sentiment"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0        1\n1        1\n2        1\n3        1\n4        1\n        ..\n10594    0\n10595    0\n10596    1\n10597    0\n10598    1\nName: SentimentBinary, Length: 10599, dtype: int64"
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "europe_df.SentimentBinary"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
