Renamed education columns

--- a/PATI-analysis.ipynb
+++ b/PATI-analysis.ipynb
@@ -223,7 +223,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Where were you born?"
+    "## Birthplace\n",
+    "Add \"Where were you born?\" column"
    ],
    "metadata": {
     "collapsed": false
@@ -277,6 +278,7 @@
     }
    ],
    "source": [
+    "# drop V004 not needed anymore\n",
     "europe_df.drop(\"V004\", axis = 1)"
    ],
    "metadata": {
@@ -362,6 +364,7 @@
    "execution_count": 130,
    "outputs": [],
    "source": [
+    "#rename columns from one hot encoding\n",
     "europe_df = europe_df.rename(columns = {'V005'  : 'Birthplace',\n",
     "                                'Country_1'     : 'Belgium',\n",
     "                                'Country_2'     : 'Austria',\n",
@@ -681,18 +684,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "V011es\n3.0     205\n5.0     193\n6.0     180\n8.0     178\n4.0     176\n7.0     161\n2.0     139\n1.0      96\n9.0      96\n10.0     41\n11.0     29\n12.0     18\nName: count, dtype: int64"
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "#rename for legibility\n",
+    "europe_df = europe_df.rename(columns = {'V010be'  : 'EducationBe',\n",
+    "                                        'V010at'  : 'EducationAt',\n",
+    "                                        'V010de'  : 'EducationDe',\n",
+    "                                        'V010es'  : 'EducationEs',\n",
+    "                                        'V010it'  : 'EducationIt',\n",
+    "                                        'V010hu'  : 'EducationHu',\n",
+    "                                        'V010Se'  : 'EducationSe',\n",
+    "                                        })"
    ],
-   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#maybe add another column to the df with one combined value for education across the countries?"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -790,6 +805,17 @@
    "cell_type": "markdown",
    "source": [
     "# 2. Data Exploration"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# plots: What do we want to plot?\n"
    ],
    "metadata": {
     "collapsed": false
