added combined education column

--- a/PATI-analysis.ipynb
+++ b/PATI-analysis.ipynb
@@ -692,9 +692,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "europe_df.Educ"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -797,6 +795,59 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Income\n",
+    "Use only 1 to 10"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "outputs": [],
+   "source": [
+    "#check economics data income\n",
+    "austria_i = europe_df.V011at.dropna()\n",
+    "belgium_i = europe_df.V011be.dropna()\n",
+    "spain_i = europe_df.V011es.dropna()\n",
+    "germany_i = europe_df.V011de.dropna()\n",
+    "hungary_i = europe_df.V011hu.dropna()\n",
+    "italy_i = europe_df.V011it.dropna()\n",
+    "sweden_i = europe_df.V011se.dropna()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "outputs": [],
+   "source": [
+    "# now merge them together\n",
+    "# 1.spain 2. sweden 3. hungary 4. italy 5. germany 6. austria 7. belgium\n",
+    "income_column = pd.concat([spain_i, sweden_i, hungary_i, italy_i, germany_i, austria_i, belgium_i])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "outputs": [],
+   "source": [
+    "#add another column to the df with one combined value for education across the countries\n",
+    "europe_df[\"IncomeCombined\"] = income_column"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Sentiment columns\n",
     "Group into negative and positive feelings towards immigrants"
    ],
@@ -822,11 +873,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 219,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'SentimentBinary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[219], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43meurope_df\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mSentimentBinary\u001B[49m\n",
+      "File \u001B[0;32m~/miniconda3/envs/deep_rl/lib/python3.10/site-packages/pandas/core/generic.py:5989\u001B[0m, in \u001B[0;36mNDFrame.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m   5982\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\n\u001B[1;32m   5983\u001B[0m     name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_internal_names_set\n\u001B[1;32m   5984\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_metadata\n\u001B[1;32m   5985\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_accessors\n\u001B[1;32m   5986\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_info_axis\u001B[38;5;241m.\u001B[39m_can_hold_identifiers_and_holds_name(name)\n\u001B[1;32m   5987\u001B[0m ):\n\u001B[1;32m   5988\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m[name]\n\u001B[0;32m-> 5989\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mobject\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;21;43m__getattribute__\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'DataFrame' object has no attribute 'SentimentBinary'"
+     ]
+    }
+   ],
    "source": [
     "europe_df.SentimentBinary"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
